# customer-data-analysis

./: README.md  pyproject.toml
notebooks/: data_analysis.ipynb  data_cleaning.ipynb
