[tool.poetry]
name = "customer-data-analysis"
version = "0.1.0"
description = ""
authors = ["Daffa Ilhami <mdaffailhami@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
plotly = "^5.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
